--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -4,7 +4,7 @@
       <nz-form-item>
         <nz-form-control nzErrorTip="Please input your username!">
           <nz-input-group nzPrefixIcon="user">
-            <input type="text" nz-input formControlName="account" placeholder="Username" />
+            <input type="text" nz-input formControlName="account" placeholder="Username" autofocus />
           </nz-input-group>
         </nz-form-control>
       </nz-form-item>
