--- a/src/app/admin/contents/articles/article-index.component.html
+++ b/src/app/admin/contents/articles/article-index.component.html
@@ -37,7 +37,7 @@
             [nzIndeterminate]="isIndeterminate" (nzCheckedChange)="checkAll($event)"></th>
         <th>标题</th>
         <th nzWidth="350px">作者</th>
-        <th nzWidth="100px" nzShowFilter [nzFilterMultiple]="false"
+        <th nzWidth="130px" nzShowFilter [nzFilterMultiple]="false"
             [nzFilters]="optionsOfFilters.isPublic" (nzFilterChange)="filter('isPublic', $event)">可访问性</th>
         <th nzWidth="350px">发布时间</th>
         <th nzWidth="250px">操作</th>
@@ -48,9 +48,13 @@
         <td nzShowCheckbox [nzChecked]="getItemCheck(data)" (nzCheckedChange)="updateItemCheck(data, $event)"></td>
         <td>{{ data.title }}</td>
         <td>{{ data.author?.nick }}</td>
+        <td>{{ data.isPublic | booleanReadable: '公开': '私密'}}</td>
         <td>{{ data.publishedAt | amDateFormat: 'L LTS' }}</td>
         <td class="options">
           <app-table-operations>
+            <app-table-operation-button (doTask)="edit($event, data, 'content')">编辑正文</app-table-operation-button>
+            <nz-divider nzType="vertical"></nz-divider>
+            <app-table-operation-button (doTask)="edit($event, data, 'info')">编辑信息</app-table-operation-button>
             <nz-divider nzType="vertical"></nz-divider>
             <app-table-operation-button (doTask)="remove($event, data)" type="delete">删除</app-table-operation-button>
           </app-table-operations>
